MDEV-20785 Converting INET6 to CHAR(39) produces garbage without a warning